[gd_scene load_steps=5 format=3 uid="uid://besrgxjg0jd4e"]

[ext_resource type="Script" uid="uid://bbb07jkd3rqce" path="res://scripts/EndGame.gd" id="1_i47uf"]
[ext_resource type="AudioStream" uid="uid://unnx1awb1jkk" path="res://SFX/707041__vilkas_sound__vs-button-click-04.mp3" id="2_3w24k"]
[ext_resource type="Texture2D" uid="uid://rpjasd22yche" path="res://Images/Screenshot 2025-08-16 193605.png" id="2_ho1j5"]
[ext_resource type="AudioStream" uid="uid://becqb5cs55qlu" path="res://SFX/55831__sergenious__fantasy.wav" id="3_hw18e"]

[node name="EndGame" type="Control"]
layout_mode = 3
anchors_preset = 0
script = ExtResource("1_i47uf")
ending_title = ""
ending_text = ""

[node name="Panel" type="Panel" parent="."]
layout_mode = 0
offset_right = 1152.0
offset_bottom = 648.0

[node name="Background" type="TextureRect" parent="Panel"]
modulate = Color(1, 1, 1, 0.627451)
offset_right = 1150.0
offset_bottom = 644.0
texture = ExtResource("2_ho1j5")
expand_mode = 2

[node name="VBoxContainer" type="VBoxContainer" parent="Panel"]
layout_mode = 0
offset_left = 233.0
offset_top = 25.0
offset_right = 911.0
offset_bottom = 625.0
theme_override_constants/separation = 20
alignment = 1

[node name="EndingTitle" type="Label" parent="Panel/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 50
text = "The End"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Label" type="Label" parent="Panel/VBoxContainer"]
custom_minimum_size = Vector2(0, 40)
layout_mode = 2

[node name="EndingText" type="RichTextLabel" parent="Panel/VBoxContainer"]
custom_minimum_size = Vector2(0, 250)
layout_mode = 2
theme_override_font_sizes/bold_italics_font_size = 25
theme_override_font_sizes/italics_font_size = 25
theme_override_font_sizes/mono_font_size = 25
theme_override_font_sizes/normal_font_size = 25
theme_override_font_sizes/bold_font_size = 25

[node name="ReturnButton" type="Button" parent="Panel/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 25
text = "Return to Main Menu"

[node name="ButtonSoundPlayer" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("2_3w24k")

[node name="AmbientPlayer" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("3_hw18e")
volume_db = -3.0
